#80129: Fix asterix wrapping on some breakpoints

--- a/Snowdog_Components/components/Atoms/typography/error/_error.scss
+++ b/Snowdog_Components/components/Atoms/typography/error/_error.scss
@@ -29,6 +29,7 @@ div {
                 &:after {
                     content: '*';
                     color: $input__required-color;
+                    white-space: nowrap;
                 }
             }
         }
@@ -40,6 +41,7 @@ div {
                     &:after {
                         content: ' *';
                         color: $input__required-color;
+                        white-space: nowrap;
                     }
                 }
             }
